tests/rosetta/out/Smalltalk/consecutive-primes-with-ascending-or-descending-differences.out
/tmp/consecutive-primes-with-ascending-or-descending-differences.st:6: parse error, expected ']'
